--- a/inner.html
+++ b/inner.html
@@ -27,36 +27,42 @@
         <h1 class="visually-hidden">Гостиницы</h1>
         <form class="form-search" action="https://echo.htmlacademy.ru" method="get">
           <div class="filters">
-            <fieldset>
+            <fieldset class="form-infrastructure">
               <legend>Инфраструктура:</legend>
               <ul class="form-list-info">
-                <li class="form-filter checkbox-on">
+                <li class="form-filter">
                   <input class="visually-hidden filter-option" type="checkbox" id="pool" checked>
+                  <span class="check-box"></span>
                   <label for="pool">Бассейн</label>
                 </li>
-                <li class="form-filter checkbox-off">
+                <li class="form-filter">
                   <input class="visually-hidden filter-option" type="checkbox" id="parking">
+                  <span class="check-box"></span>
                   <label for="parking">Парковка</label>
                 </li>
-                <li class="form-filter checkbox-off">
+                <li class="form-filter">
                   <input class="visually-hidden filter-option" type="checkbox" id="wi-fi">
+                  <span class="check-box"></span>
                   <label for="wi-fi">Wi-fi</label>
                 </li>
               </ul>
             </fieldset>
-            <fieldset>
+            <fieldset class="form-type">
               <legend>Тип жилья:</legend>
               <ul class="form-list-type">
-                <li class="form-filter checkbox-on">
+                <li class="form-filter">
                   <input class="visually-hidden filter-option" type="checkbox" id="form-hotel" checked>
+                  <span class="check-box"></span>
                   <label for="form-hotel">Гостиница</label>
                 </li>
-                <li class="form-filter checkbox-on">
+                <li class="form-filter">
                   <input class="visually-hidden filter-option" type="checkbox" id="form-motel" checked>
+                  <span class="check-box"></span>
                   <label for="form-motel">Мотель</label>
                 </li>
-                <li class="form-filter checkbox-on">
+                <li class="form-filter">
                   <input class="visually-hidden filter-option" type="checkbox" id="form-apartments" checked>
+                  <span class="check-box"></span>
                   <label for="form-apartments">Апартаменты</label>
                 </li>
               </ul>
@@ -84,7 +90,7 @@
         </form>
 
         <section class="sorting">
-          <h2 class="sorting-search">Найдено:3</h2>
+          <h2 class="sorting-search">Найдено: 3</h2>
           <div class="sorting-sections">
             <span class="sorting-title">Сортировка:</span>
             <ul class="sorting-list">
@@ -118,7 +124,7 @@
                 </a>
                 <div class="catalog-item-info">
                   <h2 class="catalog-item-title">
-                    <a href="catalog-item.html">Amara record & spa</a>
+                    <a href="catalog-item.html">Amara resort & spa</a>
                   </h2>
                   <span class="catalog-hotel">Гостиница</span>
                   <span>От 4000 р.</span>
@@ -135,7 +141,7 @@
                   <span></span>
                   <span></span>
                 </div>
-                <p class="hotel-rating-text">Рейтинг:8,5</p>
+                <p class="hotel-rating-text">Рейтинг: 8,5</p>
               </div>
             </li>
 
@@ -162,7 +168,7 @@
                   <span></span>
                   <span></span>
                 </div>
-                <p class="hotel-rating-text">Рейтинг:8,9</p>
+                <p class="hotel-rating-text">Рейтинг: 8,9</p>
               </div>
             </li>
 
@@ -188,7 +194,7 @@
                   <span></span>
                   <span></span>
                 </div>
-                <p class="hotel-rating-text">Рейтинг:9.2</p>
+                <p class="hotel-rating-text">Рейтинг: 9.2</p>
               </div>
             </li>
           </ul>
