--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               <div class="form-control">
                   <label for="date-in">Дата заезда:</label>
                 <div class="form-input">
-                  <input type="text" class="arrival" id="date-in" placeholder="24 апреля 2017">
+                  <input type="text" class="arrival" id="date-in" name="date-in" placeholder="24 апреля 2017">
                   <button class="form-calendar" type="button"></button>
                 </div>
               </div>
@@ -116,7 +116,7 @@
               <div class="form-control">
                   <label for="date-out">Дата выезда:</label>
                 <div class="form-input">
-                  <input type="text" class="departure" id="date-out" placeholder="4 июля 2017">
+                  <input type="text" class="departure" name="date-out" id="date-out" placeholder="4 июля 2017">
                   <button class="form-calendar" type="button"></button>
                 </div>
               </div>
@@ -126,7 +126,7 @@
                   <label for="adults">Взрослые:</label>
                   <div class="form-grid-input">
                     <button class="form-minus" type="button"></button>
-                    <input type="text" class="adults" id="adults" value="2">
+                    <input type="text" class="adults" id="adults" name="adults" value="2">
                     <button class="form-plus" type="button"></button>
                   </div>
                 </div>
@@ -135,7 +135,7 @@
                   <label for="children">Дети:</label>
                   <div class="form-grid-input">
                     <button class="form-minus" type="button"></button>
-                    <input type="text" class="children" id="children" value="0">
+                    <input type="text" class="children" id="children" name="children" value="0">
                     <button class="form-plus" type="button"></button>
                   </div>
                 </div>
